# OBD-TOOLKIT

./: .gitignore  OBD-Toolkit.bat  pyproject.toml
.claude/: settings.local.json
src/obd_toolkit/: __init__.py  __main__.py  cli.py
src/obd_toolkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/obd_toolkit/analysis/: __init__.py  base.py  correlator.py  faults.py  fuel.py  performance.py
src/obd_toolkit/collectors/: __init__.py  base.py  dtc.py  live.py  pid.py  vin.py
src/obd_toolkit/connection/: __init__.py  adapter.py  manager.py
src/obd_toolkit/data/: __init__.py  dtc_codes.json  manufacturers.json
src/obd_toolkit/data/samples/: bad_spark_plug.csv  bad_spark_plug.json  esc_fault.csv  esc_fault.json  generate_samples.py  normal_commute.csv  normal_commute.json  oil_problem.csv  oil_problem.json
src/obd_toolkit/decoders/: __init__.py  dtc.py  pid.py  vin.py
src/obd_toolkit/display/: __init__.py  console.py  live.py  tables.py
src/obd_toolkit/models/: __init__.py  dtc.py  pid.py  session.py  vehicle.py
src/obd_toolkit/storage/: __init__.py  history.py  logger.py
tests/: __init__.py  conftest.py
